@@ -3,8 +3,9 @@ freebsd-buildutils (9.0-3) UNRELEASED; urgency=low
   * Replace 10_non_kfreebsd.diff with equivalent patch from upstream
     HEAD.
   * Add __BEGIN_DECLS / __END_DECLS in local unistd.h.
+  * Fix local endian.h to use native <sys/endian.h> on GNU/kFreeBSD.
 
- -- Robert Millan <rmh@debian.org>  Sat, 28 Jan 2012 19:23:40 +0100
+ -- Robert Millan <rmh@debian.org>  Sat, 28 Jan 2012 19:24:52 +0100
 
 freebsd-buildutils (9.0-2) unstable; urgency=low
 
